- added code to get next task - added code to start new task and resume tasks after previous task completed (moved to svc handler as I need to restore task registers and it is hard to do in c code) - added det os idle task which will be executed if no task is available at the moment - task stack memory is now separate from other data as it must be 8 byte align - moved register storage to scheduled task structure

--- a/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
+++ b/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
@@ -73,7 +73,9 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src-asm\det_os_idle.s" />
     <ClCompile Include="..\src-asm\execute_tasks.s" />
+    <ClCompile Include="..\src-asm\resume_task.s" />
     <ClCompile Include="..\src-asm\schedule_task_svc.s" />
     <ClCompile Include="..\src-asm\stark_new_task.s" />
     <ClCompile Include="..\src-asm\svc_handler.s" />
