- R12 is not saved by the caller, fixed tim2_irq_handler.S (R12 was changed and return was busted) - fixed some ASM comments so they don't look like macro commands - result codes are now usable by both ASM and C/C++

--- a/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
+++ b/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <ClInclude Include="..\inc\det_os.h" />
     <ClInclude Include="..\inc\det_os_implementation.h" />
+    <ClInclude Include="..\inc\result_codes.h" />
     <ClInclude Include="..\src\global_data.h" />
     <ClInclude Include="..\src\schedule_tasks.h" />
     <ClInclude Include="..\src\schedule_tasks_defs.h" />
