--- a/software/common/lib-stm32l1/lib-stm32l151ze/lib-stm32l151ze.vcxproj
+++ b/software/common/lib-stm32l1/lib-stm32l151ze/lib-stm32l151ze.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{3E06D10A-43C7-40B0-90C8-E35BB970AA0E}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.12</BSP_VERSION>
+    <BSP_VERSION>2018.12R2</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
