--- a/software/common/test-utils/lib-stm32l496ze/test-utils.vcxproj
+++ b/software/common/test-utils/lib-stm32l496ze/test-utils.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{CD118854-7FE9-4B26-A795-D4D85E5FFDAD}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.08</BSP_VERSION>
+    <BSP_VERSION>2018.12R2</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -42,19 +42,15 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib-utils\inc;$(SolutionDir)\..\common\lib-test\inc;$(SolutionDir)\lib-driver\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\common\lib-utils\inc;$(SolutionDir)\common\lib-test\inc;$(SolutionDir)\lib-stm32l4;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib-utils\inc;$(SolutionDir)\..\common\lib-test\inc;$(SolutionDir)\lib-driver\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\common\lib-utils\inc;$(SolutionDir)\common\lib-test\inc;$(SolutionDir)\lib-stm32l4;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="src\main.c" />
-    <ClCompile Include="src\rolling_values_test.c" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
@@ -64,20 +60,21 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\common\lib-stm32l4\lib-stm32l4.vcxproj">
-      <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\common\lib-test\lib-test.vcxproj">
-      <Project>{c5dd5c38-ee4f-4736-86ac-ab980d90cbb2}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-driver-stm32l496ze\lib-driver-stm32l496ze.vcxproj">
-      <Project>{388f4433-00a8-4f05-9375-18a1ce980fbe}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-utils\lib-utils.vcxproj">
-      <Project>{aa910249-4820-4f9b-b6bb-f2859e96845a}</Project>
-    </ProjectReference>
+    <ClCompile Include="..\src\main.c" />
+    <ClCompile Include="..\src\rolling_values_test.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\rolling_values_test.h" />
+    <ClInclude Include="..\src\rolling_values_test.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\lib-stm32l4\lib-stm32l496ze\lib-stm32l496ze.vcxproj">
+      <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\lib-test\lib-stm32l496ze\lib-test-stm32l496ze.vcxproj">
+      <Project>{c5dd5c38-ee4f-4736-86ac-ab980d90cbb2}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\lib-utils\lib-stm32l496ze\lib-utils.vcxproj">
+      <Project>{aa910249-4820-4f9b-b6bb-f2859e96845a}</Project>
+    </ProjectReference>
   </ItemGroup>
 </Project>
