--- a/software/common/lib-utils/lib-test-stm32l496ze/lib-utils-test-stm32l496ze.vcxproj
+++ b/software/common/lib-utils/lib-test-stm32l496ze/lib-utils-test-stm32l496ze.vcxproj
@@ -60,21 +60,21 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\main.c" />
-    <ClCompile Include="..\src\rolling_values_test.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\src\rolling_values_test.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\lib-stm32l4\lib-stm32l496ze\lib-stm32l496ze.vcxproj">
       <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\lib-test\lib-stm32l496ze\lib-test-stm32l496ze.vcxproj">
       <Project>{c5dd5c38-ee4f-4736-86ac-ab980d90cbb2}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\lib-utils\lib-stm32l496ze\lib-utils.vcxproj">
+    <ProjectReference Include="..\lib-stm32l496ze\lib-utils-stm32l496ze.vcxproj">
       <Project>{aa910249-4820-4f9b-b6bb-f2859e96845a}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\src-test\main.c" />
+    <ClCompile Include="..\src-test\rolling_values_test.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\src-test\rolling_values_test.h" />
   </ItemGroup>
 </Project>
