--- a/software/common/lib-stm32l1/lib-stm32l151ve/lib-stm32l151ve.vcxproj.filters
+++ b/software/common/lib-stm32l1/lib-stm32l151ve/lib-stm32l151ve.vcxproj.filters
@@ -12,10 +12,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="lib-stm32l151ze-Debug.vgdbsettings">
+    <None Include="lib-stm32l151ve-Debug.vgdbsettings">
       <Filter>VisualGDB settings</Filter>
     </None>
-    <None Include="lib-stm32l151ze-Release.vgdbsettings">
+    <None Include="lib-stm32l151ve-Release.vgdbsettings">
       <Filter>VisualGDB settings</Filter>
     </None>
     <None Include="stm32.xml">
