--- a/software/line-sensor/main-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
+++ b/software/line-sensor/main-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{3E06D10A-43C7-40B0-90C8-E35BB970AA0E}</ProjectGuid>
+    <ProjectGuid>{B321BAA2-AD22-41E2-892D-AB7B8FE85114}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
     <BSP_VERSION>2018.12R2</BSP_VERSION>
     <InPlaceBSPSubdir />
@@ -34,51 +34,62 @@
     <GNUConfigurationType>Debug</GNUConfigurationType>
     <ToolchainID>com.visualgdb.arm-eabi</ToolchainID>
     <ToolchainVersion>7.2.0/8.0.1/r3</ToolchainVersion>
-    <GNUTargetType>StaticLibrary</GNUTargetType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ToolchainID>com.visualgdb.arm-eabi</ToolchainID>
     <ToolchainVersion>7.2.0/8.0.1/r3</ToolchainVersion>
-    <GNUTargetType>StaticLibrary</GNUTargetType>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
-      <CLanguageStandard>C11</CLanguageStandard>
+      <CLanguageStandard>GNU11</CLanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)\line-sensor\inc;$(SolutionDir)\common\lib-stm32l1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <InlineFunctions>true</InlineFunctions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
-      <CLanguageStandard>C11</CLanguageStandard>
+      <CLanguageStandard>GNU11</CLanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)\line-sensor\inc;$(SolutionDir)\common\lib-stm32l1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <InlineFunctions>true</InlineFunctions>
     </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="lib-stm32l151ze-Debug.vgdbsettings" />
-    <None Include="lib-stm32l151ze-Release.vgdbsettings" />
+    <None Include="main-line-sensor-stm32l151ve-Debug.vgdbsettings" />
+    <None Include="main-line-sensor-stm32l151ve-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\stm32l1xx.h" />
-    <ClInclude Include="..\src\system_stm32l1xx.h" />
-    <ClInclude Include="..\stm32\stm32l151xe.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_adc.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_bus.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_cortex.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_dma.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_gpio.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_i2c.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_pwr.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_rcc.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_spi.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_system.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_usart.h" />
-    <ClInclude Include="..\stm32\stm32l1xx_ll_utils.h" />
+    <ClCompile Include="..\src\adc.c" />
+    <ClCompile Include="..\src\dma.c" />
+    <ClCompile Include="..\src\global_data.c" />
+    <ClCompile Include="..\src\gpio.c" />
+    <ClCompile Include="..\src\i2c.c" />
+    <ClCompile Include="..\src\main.c" />
+    <ClCompile Include="..\src\spi.c" />
+    <ClCompile Include="..\src\system_clocks.c" />
+    <ClCompile Include="..\src\usart.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\startup_stm32l151xe.s" />
-    <ClCompile Include="..\src\stm32l1xx_ll_utils.c" />
-    <ClCompile Include="..\src\system_stm32l1xx.c" />
+    <ProjectReference Include="..\..\common\lib-stm32l1\lib-stm32l151ve\lib-stm32l151ve.vcxproj">
+      <Project>{3e06d10a-43c7-40b0-90c8-e35bb970aa0e}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\inc\line_sensor.h" />
+    <ClInclude Include="..\inc\line_sensor_defs.h" />
+    <ClInclude Include="..\src\adc.h" />
+    <ClInclude Include="..\src\buffer_index.h" />
+    <ClInclude Include="..\src\dma.h" />
+    <ClInclude Include="..\src\global_data.h" />
+    <ClInclude Include="..\src\gpio.h" />
+    <ClInclude Include="..\src\i2c.h" />
+    <ClInclude Include="..\src\qmath.h" />
+    <ClInclude Include="..\src\spi.h" />
+    <ClInclude Include="..\src\system_clocks.h" />
+    <ClInclude Include="..\src\types.h" />
+    <ClInclude Include="..\src\usart.h" />
   </ItemGroup>
 </Project>
