- added timer header to STM31L1 library - fixed ADC accuracy (slowed it down a bit) - fixed some invalid hardcoded array length - added timer with microsecond resolution

--- a/software/common/lib-stm32l1/lib-stm32l151ve/lib-stm32l151ve.vcxproj
+++ b/software/common/lib-stm32l1/lib-stm32l151ve/lib-stm32l151ve.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="..\stm32\stm32l1xx_ll_rcc.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_spi.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_system.h" />
+    <ClInclude Include="..\stm32\stm32l1xx_ll_tim.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_usart.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_utils.h" />
   </ItemGroup>
