- added watchdog timer and reset if adc wasn't queried successfully in last ((6 * 4) / 37000) = 0.648649 milliseconds

--- a/software/common/lib-stm32l1/lib-stm32l151ve/lib-stm32l151ve.vcxproj
+++ b/software/common/lib-stm32l1/lib-stm32l151ve/lib-stm32l151ve.vcxproj
@@ -69,6 +69,7 @@
     <ClInclude Include="..\stm32\stm32l1xx_ll_dma.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_gpio.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_i2c.h" />
+    <ClInclude Include="..\stm32\stm32l1xx_ll_iwdg.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_pwr.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_rcc.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_spi.h" />
