--- a/software/line-sensor/main-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj.filters
+++ b/software/line-sensor/main-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="..\src\global_data.c">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\watchdog.c">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\adc.h">
@@ -77,6 +80,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\qmath.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\watchdog.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
