--- a/software/line-sensor/main-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
+++ b/software/line-sensor/main-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
@@ -83,7 +83,7 @@
     <ClInclude Include="..\inc\line_sensor.h" />
     <ClInclude Include="..\inc\line_sensor_defs.h" />
     <ClInclude Include="..\src\adc.h" />
-    <ClInclude Include="..\src\buffer_index.h" />
+    <ClInclude Include="..\src\consumer_producer_buffer.h" />
     <ClInclude Include="..\src\dma.h" />
     <ClInclude Include="..\src\global_data.h" />
     <ClInclude Include="..\src\gpio.h" />
