--- a/software/line-sensor/main-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj.filters
+++ b/software/line-sensor/main-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj.filters
@@ -79,5 +79,8 @@
     <ClInclude Include="..\src\consumer_producer_buffer.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\interrupt_priorities.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
