--- a/software/controller-motors-sensors/main-stm32l496ze/main-robot.vcxproj
+++ b/software/controller-motors-sensors/main-stm32l496ze/main-robot.vcxproj
@@ -12,9 +12,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{DBEBA908-C4B2-43FB-833B-AA39C9F860BE}</ProjectGuid>
+    <ProjectGuid>{2C740AC9-C988-4102-AF56-78DA516B963B}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.08</BSP_VERSION>
+    <BSP_VERSION>2018.12R2</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -34,52 +34,44 @@
     <GNUConfigurationType>Debug</GNUConfigurationType>
     <ToolchainID>com.visualgdb.arm-eabi</ToolchainID>
     <ToolchainVersion>7.2.0/8.0.1/r3</ToolchainVersion>
-    <GNUTargetType>StaticLibrary</GNUTargetType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ToolchainID>c2599f8d-f601-4e3d-9041-1d5828a28edd</ToolchainID>
     <ToolchainVersion>7.3.1/(GNU/r0</ToolchainVersion>
-    <GNUTargetType>StaticLibrary</GNUTargetType>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\inc;$(SolutionDir)\lib-utils\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib-robot\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\inc;$(SolutionDir)\lib-utils\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib-robot\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="inc\buttons.h" />
-    <ClInclude Include="inc\clock.h" />
-    <ClInclude Include="inc\debug.h" />
-    <ClInclude Include="inc\driver.h" />
-    <ClInclude Include="inc\imu.h" />
-    <ClInclude Include="inc\line_sensor.h" />
-    <ClInclude Include="inc\motor_controller.h" />
-    <ClInclude Include="inc\parameters.h" />
-    <ClInclude Include="inc\sd.h" />
-    <ClInclude Include="inc\status.h" />
-    <ClInclude Include="inc\tasks.h" />
-    <ClInclude Include="inc\timing.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="lib-driver-Debug.vgdbsettings" />
-    <None Include="lib-driver-Release.vgdbsettings" />
+    <None Include="main-robot-Debug.vgdbsettings" />
+    <None Include="main-robot-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\clock.c" />
-    <ClCompile Include="src\tasks.c" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\..\common\lib-stm32l4\lib-stm32l4.vcxproj">
+      <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\lib-driver-stm32l496ze\lib-driver-stm32l496ze.vcxproj">
+      <Project>{388f4433-00a8-4f05-9375-18a1ce980fbe}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\lib-driver\lib-driver.vcxproj">
+      <Project>{dbeba908-c4b2-43fb-833b-aa39c9f860be}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\lib-robot\lib-robot.vcxproj">
+      <Project>{bd706e3d-9b25-4b82-b1a1-e9391f2ca4ef}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\lib-utils\lib-utils.vcxproj">
       <Project>{aa910249-4820-4f9b-b6bb-f2859e96845a}</Project>
     </ProjectReference>
