--- a/software/controller-motors-sensors/prj-stm32l496ze/controller-motors-sensors-stm32l496ze.vcxproj
+++ b/software/controller-motors-sensors/prj-stm32l496ze/controller-motors-sensors-stm32l496ze.vcxproj
@@ -55,8 +55,8 @@
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="main-robot-Debug.vgdbsettings" />
-    <None Include="main-robot-Release.vgdbsettings" />
+    <None Include="controller-motors-sensors-stm32l496ze-Debug.vgdbsettings" />
+    <None Include="controller-motors-sensors-stm32l496ze-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
